--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ MONGO_DATABASE_URI=mongodb://admin:jKFLXJCoGgsVCoiO@localhost:27017/
 MONGO_DATABASE=trackthemoney
 
 # jwt
+FLASK_JWT_SECRET_KEY=7e782afc0e40473b3d964ed1
